# mfa-service

./: .env.docker  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
keys/: private.pem  public.pem
scripts/: generate_keys.sh
src/: config.rs  error.rs  handlers.rs  main.rs  models.rs
src/services/: email.rs  mod.rs  redis.rs
templates/: otp.html
