[package]
name = "mfa-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "set-header"] }
http = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.15"

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }

# Config & Error handling
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"

# Utilities
rand = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
askama = "0.16.0"
